[package]
name = "rpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
bitflags = "1.3.2"
chrono = "0.4.21"
dirs = "4.0.0"
either = "1.7.0"
float-ord = "0.3.2"
hex = "0.4.3"
itertools = "0.10.3"
md4 = "0.10.1"
nom = "7.1.1"
num-traits = "0.2.15"
rand = "0.8.5"
rustyline = "10.0.0"
sha2 = "0.10.2"
strfmt = "0.2.2"
thiserror = "1.0.32"
